// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderPaymentCardReaderChargeDetails renders reader charges 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card woocommerce-table transactions-list woocommerce-report-table has-search has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Card readers
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                class="gridicon gridicons-cloud-download"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M18 9c-.009 0-.017.002-.025.003A6.496 6.496 0 005 9.5a6.5 6.5 0 00.186 1.519C5.123 11.016 5.064 11 5 11a4 4 0 00-4 4c0 1.202.541 2.267 1.38 3h18.593C22.196 17.089 23 15.643 23 14a5 5 0 00-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                  />
                </g>
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Download
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-1"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-1"
              >
                Card readers
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Reader id
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Transactions
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Fee
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item is-left-aligned"
                    scope="row"
                  >
                    1
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    active
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    3
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    $3.00
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item is-left-aligned"
                    scope="row"
                  >
                    2
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    inactive
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    1
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    $0.00
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        />
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`RenderPaymentCardReaderChargeDetails renders without reader charges 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card woocommerce-table transactions-list woocommerce-report-table has-search has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Card readers
          </h2>
          <div
            class="woocommerce-table__actions"
          />
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Card readers
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Reader id
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Transactions
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Fee
                    </span>
                  </th>
                </tr>
                <tr>
                  <td
                    class="woocommerce-table__empty-item"
                    colspan="4"
                  >
                    No data to display
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        />
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
